# calendar_app

./: .env-exaple  .gitignore  README.md  TODO  pyproject.toml
src/Calendar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/calendar_app/: calendar_entry.py  consts.py  my_calendar.py  parser.py
src/scripts/: __init__.py
